php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68887 resources are not freed correctly
Submitted: 2015-01-22 14:29 UTC Modified: 2015-01-30 11:48 UTC
From: mike@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: master-Git-2015-01-22 (Git) OS:
Private report: No CVE-ID: None
 [2015-01-22 14:29 UTC] mike@php.net
Description:
------------
zend_resource_close/delete fails to free hash entry

Test script:
---------------
while (fclose(fopen("php://temp","w+")));

Expected result:
----------------
No memory exhaustion.

Actual result:
--------------
OOM

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-01-22 14:30 UTC] mike@php.net
-Summary: resources are not free correctly +Summary: resources are not freed correctly
 [2015-01-27 02:56 UTC] mike@php.net
-Assigned To: +Assigned To: dmitry
 [2015-01-30 11:48 UTC] mike@php.net
Here's a (partial) fix: https://gist.github.com/m6w6/628c03b8271d8c8ab120

But it makes ext/standard/tests/http/bug60570.phpt fail.

Maybe it's just enough for a hint where to start looking at.
 [2015-04-08 10:30 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4d9a1883aa764e502990488d2e8b9c978be6fbd2
Log: Fixed bug #68887 (resources are not freed correctly)
 [2015-04-08 10:30 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 [2016-07-20 11:39 UTC] davey@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4d9a1883aa764e502990488d2e8b9c978be6fbd2
Log: Fixed bug #68887 (resources are not freed correctly)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 03:00:01 2026 UTC