Fixed bug #68887 (resources are not freed correctly)